More todos less notes

--- a/cfg/sn_a5x.mos.default.yaml
+++ b/cfg/sn_a5x.mos.default.yaml
@@ -11,7 +11,8 @@ layout:
 
   numbers:
     weeklylines: 10
-    dailynotes: 24
+    dailytodos: 15
+    dailynotes: 17
     dotwidthtwothirds: 19
     dotwidthfull: 29
 
